objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Dieselskandal</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Check</fullName>
        </values>
        <values>
            <fullName>Claim</fullName>
        </values>
        <values>
            <fullName>Finished</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Finanzierung</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Check</fullName>
        </values>
        <values>
            <fullName>Claim</fullName>
        </values>
        <values>
            <fullName>Finished</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Lebensversicherung</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Check</fullName>
        </values>
        <values>
            <fullName>Claim</fullName>
        </values>
        <values>
            <fullName>Finished</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Master</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Check</fullName>
        </values>
        <values>
            <fullName>Claim</fullName>
        </values>
        <values>
            <fullName>Finished</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AGB_Kunde_erreicht__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AGB Kunde erreicht</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AGB_Kunde_nicht_erreicht__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AGB/Kunde nicht erreicht</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Abschluss_zwischen_1991_und_2007__c</fullName>
        <label>Abschluss zwischen 1991 und 2007</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Abschluss_zwischen_1991_und_2007</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accidential_Death_Benefit_Absolute__c</fullName>
        <label>Absolute Unfall-Todesfallleistung</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Accidential_Death_Benefit_Percentage__c</fullName>
        <label>Prozentuale Unfall-Todesfallleistung</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Accidential_Death_Benefit_Type__c</fullName>
        <label>Art der Unfall-Todesfallleistung</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Accidential_Death_Benefit_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>VH24 oder VR24.</inlineHelpText>
        <label>Unternehmen</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7</booleanFilter>
            <errorMessage>Das Unternehmen muss VH24, VR24, Testkunde, Test KT oder Test sein.</errorMessage>
            <filterItems>
                <field>Account.Name</field>
                <operation>equals</operation>
                <value>VH24</value>
            </filterItems>
            <filterItems>
                <field>Account.Name</field>
                <operation>equals</operation>
                <value>VR24</value>
            </filterItems>
            <filterItems>
                <field>Account.Name</field>
                <operation>equals</operation>
                <value>testkunde</value>
            </filterItems>
            <filterItems>
                <field>Account.Name</field>
                <operation>equals</operation>
                <value>Test KT</value>
            </filterItems>
            <filterItems>
                <field>Account.Name</field>
                <operation>equals</operation>
                <value>Test</value>
            </filterItems>
            <filterItems>
                <field>Account.Name</field>
                <operation>equals</operation>
                <value>Martin Test Hahn Test</value>
            </filterItems>
            <filterItems>
                <field>Account.Name</field>
                <operation>equals</operation>
                <value>Klaus Schreimel, Volkswagen AG</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Unternehmen)</relationshipLabel>
        <relationshipName>Opportunities_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Non_contributory_Periods__c</fullName>
        <label>Active Non-contributory Periods</label>
        <summaryFilterItems>
            <field>Non_contributory_Period__c.Active_Clean__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Non_contributory_Period__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Refund__c</fullName>
        <description>Bisheriger absoluter Erstattungsbetrag.</description>
        <formula>IF(ISNULL(Refund__c),IF(NOT(ISNULL(Partial_Refund__c)),Partial_Refund__c,0),Refund__c)</formula>
        <label>Actual Refund</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdWords_Campaign__c</fullName>
        <label>AdWords Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdWords_Content__c</fullName>
        <label>AdWords Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdWords_Medium__c</fullName>
        <label>AdWords Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdWords_Source__c</fullName>
        <label>AdWords Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdWords_Term__c</fullName>
        <label>AdWords Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin__c</fullName>
        <label>Admin</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Advance_Payment__c</fullName>
        <label>Anzahlung</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aktenzeichen_Zusatz__c</fullName>
        <label>Aktenzeichen-Zusatz</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Already_Informed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bereits informiert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_In_Dispute_Clean__c</fullName>
        <label>Amount In Dispute Clean</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_In_Dispute__c</fullName>
        <formula>IF(RecordTypeId = '0121t000000DzR3',IF(ISPICKVAL(Process_Type__c,'DG_Keep'),Claim_For_Compensation__c,Purchase_Price__c-Compensation_For_Use__c ),IF(RecordTypeId = '0121t000000DzR4',Paid_Installments__c + Advance_Payment__c + Future_Savings__c + Final_Installment__c,Paid_Up_Contributions__c - Amounts_Received__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Streitwert</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amounts_Received__c</fullName>
        <label>Erhaltene Beiträge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnfrageFilter__c</fullName>
        <label>AnfrageFilter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Percentage_Rate__c</fullName>
        <label>Effektive Jahreszins</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Application_Date_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Application_Date__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Application_Date__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Application_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Date Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <label>Antragsdatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assignment_Type__c</fullName>
        <label>Auftragstyp</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Assignment_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Abtretung</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorization_Count__c</fullName>
        <label>Authorization Count</label>
        <summaryForeignKey>Authorization__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Auto_Follow_up_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Anzahl Auto-Follow-ups</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Follow_up_Date__c</fullName>
        <label>Nächstes Auto-Follow-up</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Automarke__c</fullName>
        <label>Automarke</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Automarke</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Automatisches_Follow_up_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatisches Follow-up 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autoset_Lost_Date__c</fullName>
        <label>Geplantes Absagedatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Autostart_Auto_Follow_up_Journeys__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Follow-up Journeys automatisch starten</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <label>Verfügbarkeit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Availabilities</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backoffice_Email__c</fullName>
        <formula>Backoffice__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Backoffice Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backoffice_Name__c</fullName>
        <formula>Backoffice__r.FirstName + ' ' +  Backoffice__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Backoffice Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backoffice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person in charge for backoffice process parts.</description>
        <label>Backoffice</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities_Backoffice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kreditinstitut</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Kreditinstitut)</relationshipLabel>
        <relationshipName>Opportunities_Bank</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Before_2015__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dieselprozess, Vor dem 22.09.2015 gekauft (aber nicht älter als 10 Jahre)</description>
        <label>Vor dem 22.09.2015 gekauft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bemerkung_LV__c</fullName>
        <label>Bemerkung</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bestandteil_betriebl_Altersvorsorge__c</fullName>
        <label>Bestandteil betriebl. Altersvorsorge</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bestandteil_betriebl_Altersvorsorge</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Browser__c</fullName>
        <label>Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BypassProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassProcessBuilder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CM_Tracking__c</fullName>
        <description>This field is to track a specific campaign monitor campaign</description>
        <label>CM Tracking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Number__c</fullName>
        <label>CS Nummer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Compensation__c</fullName>
        <formula>Purchase_Price__c - (Purchase_Price__c * (Current_Mileage__c / 500000))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Compensation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calendar_week__c</fullName>
        <formula>Case( 
MOD( DATE(YEAR(Created_Date__c), 1, 1) - DATE (1900, 1, 7), 7), 
0, (Created_Date__c- DATE(YEAR(Created_Date__c),1,1) + 3) /7, 
1, (Created_Date__c- DATE(YEAR(Created_Date__c),1,1) + 4) /7, 
2, (Created_Date__c- DATE(YEAR(Created_Date__c),1,1) + 5) /7, 
3, (Created_Date__c- DATE(YEAR(Created_Date__c),1,1) + 6) /7, 
4, (Created_Date__c- DATE(YEAR(Created_Date__c),1,1) + 7) /7, 
5, (Created_Date__c- DATE(YEAR(Created_Date__c),1,1) + 1) /7, 
6, (Created_Date__c- DATE(YEAR(Created_Date__c),1,1) + 2) /7, 
99)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kalenderwoche</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Callcenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person in charge for call center process parts.</description>
        <label>Callcenter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities_Callcenter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Kampagne</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Instructions_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Widerrufsbelehrung vollständig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checklist_Information_Complete__c</fullName>
        <formula>AND(TEXT(Payment_Term__c) != '',NOT(ISNULL(Insured_Person_1_Date_Of_Birth__c)),NOT(ISNULL(Inception_Date__c)),NOT(ISNULL(Expiration_Date__c)),NOT(ISNULL(Contribution_Life_Insurance__c)),NOT(ISNULL(Valuation_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Checklist Information Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checklist_Link__c</fullName>
        <formula>if(Form_Hash_1__c != null,IF(Account_Id__c = '0010Y00000eCUS9','https://form.verbraucherhilfe24.de/lebensversicherung-002/' + Form_Hash_1__c,'https://forms.cloudworx.agency/verbraucherrechte24/001/' + Form_Hash_1__c),'muss erstellt werden')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link zur Checkliste - OLD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Count__c</fullName>
        <label>Claim Count</label>
        <summaryForeignKey>Claim__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Claim_For_Compensation__c</fullName>
        <formula>Purchase_Price__c * 0.3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schadensersatz</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Claims_Without_Legal_Agent__c</fullName>
        <label>Claims Without Legal Agent</label>
        <summaryFilterItems>
            <field>Claim__c.Legal__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Claim__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Client_Scale_Id__c</fullName>
        <label>Client Scale Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_On_Loss__c</fullName>
        <label>Absagekommentar</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Kommentar</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gewerbekunde</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comp2_Amount_In_Dispute__c</fullName>
        <formula>IF(RecordTypeId = '0121t000000DzR3',IF(ISPICKVAL(Process_Type__c,'DG_Keep'),Claim_For_Compensation__c,Purchase_Price__c-Comparison2_Compensation_Use__c ),IF(RecordTypeId = '0121t000000DzR4',Paid_Installments__c + Advance_Payment__c + Future_Savings__c + Final_Installment__c,Paid_Up_Contributions__c - Amounts_Received__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>300000-Streitwert</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comp_Amount_In_Dispute__c</fullName>
        <formula>IF(RecordTypeId = '0121t000000DzR3',IF(ISPICKVAL(Process_Type__c,'DG_Keep'),Claim_For_Compensation__c,Purchase_Price__c-Comparison_Compensation_Use__c ),IF(RecordTypeId = '0121t000000DzR4',Paid_Installments__c + Advance_Payment__c + Future_Savings__c + Final_Installment__c,Paid_Up_Contributions__c - Amounts_Received__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>250000-Streitwert</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Unternehmen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comparison2_Compensation_Use__c</fullName>
        <formula>Purchase_Price__c * ((Current_Mileage__c - Mileage_On_Purchase__c) / 300000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>300000-Nutzungsentschädigung</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comparison_Compensation_Use__c</fullName>
        <formula>Purchase_Price__c * ((Current_Mileage__c - Mileage_On_Purchase__c) / 250000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>250000-Nutzungsentschädigung</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comparison_Mileage__c</fullName>
        <defaultValue>(250000)</defaultValue>
        <label>Vergleichs-Kilometer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Compensation_For_Use_Clean__c</fullName>
        <label>Compensation For Use Clean</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compensation_For_Use__c</fullName>
        <formula>Purchase_Price__c * ((Current_Mileage__c - Mileage_On_Purchase__c) / Expected_Mileage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nutzungsentschädigung</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Confirmed_Authorization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vollmacht bestätigt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed_Claim_For_Compensation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schadensersatzanspruch bestätigt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed_Privacy_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Datenschutzerklärung bestätigt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed_Terms_And_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AGB bestätigt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Invalid__c</fullName>
        <formula>Contact__r.Invalid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Kunde</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Anfragen</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contractual_Payment_End__c</fullName>
        <label>Vertragliches Ende Beitragszahlungen</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contribution_Life_Insurance__c</fullName>
        <label>Beitrag Lebensversicherung</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Courtop__c</fullName>
        <formula>Admin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gericht des Gegners</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreateDate_Lead__c</fullName>
        <label>CreateDate Lead</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Date_Old_Org__c</fullName>
        <label>Created Date Old Org</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Contract_Numbe__c</fullName>
        <label>Kreditvertragsnummer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Mileage__c</fullName>
        <label>Aktueller Kilometerstand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Callback_Link__c</fullName>
        <formula>IF(Account.Name = "VH24",'https://form.verbraucherhilfe24.de/dieselskandal-rueckruf/' + Id,'nicht verfügbar')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link zu Rückrufformular - OLD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Callback_Staging_Link__c</fullName>
        <formula>IF(Account.Name = "VH24",'http://staging.forms.cloudworx.agency/verbraucherhilfe24/dieselskandal-rueckruf/' + Id,'nicht verfügbar')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link zu Rückrufformular (Staging) - OLD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number_5_Digit__c</fullName>
        <label>Kundennummer 5-stellig</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Kundennummer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Commitment_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Date_Commitment__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Date_Commitment__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Date_Commitment__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Commitment Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Commitment__c</fullName>
        <label>Datumszusage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Created__c</fullName>
        <formula>IF(
      ISBLANK( Created_Date_Old_Org__c ), CreatedDate,Created_Date_Old_Org__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Stage_Change__c</fullName>
        <formula>ROUND(Now() - Last_Stage_Change__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tage seit letztem Statuswechsel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Death_Benefit_Absolute__c</fullName>
        <label>Absolute Todesfallleistung</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Death_Benefit_Percentage__c</fullName>
        <label>Prozentuale Todesfallleistung</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Death_Benefit_Type__c</fullName>
        <label>Art der Todesfallleistung</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Death_Benefit_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Depreciation_Known__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dieselprozess, Wertverlust bekannt?</description>
        <label>Wertverlust bekannt?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description_Row_1__c</fullName>
        <label>Beschreibung im Ergebnis, Zeile 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Row_2__c</fullName>
        <label>Beschreibung im Ergebnis, Zeile 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Row_3__c</fullName>
        <label>Beschreibung im Ergebnis, Zeile 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diesel_Code__c</fullName>
        <description>Diesel-Code aus dem Flyer</description>
        <label>Diesel Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DIESEL1</fullName>
                </value>
                <value>
                    <fullName>DIESEL2</fullName>
                </value>
                <value>
                    <fullName>DIESEL3</fullName>
                </value>
                <value>
                    <fullName>kein Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Count__c</fullName>
        <label>Document Count</label>
        <summaryForeignKey>Document__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Document_Upload_Link__c</fullName>
        <formula>if(Form_Hash_1__c != null,IF(Product__c = 'Dieselskandal',IF(Account_Id__c = '0011t00000HUP05','https://form.verbraucherhilfe24.de/dieselskandal-003/' + Form_Hash_1__c,'https://forms.cloudworx.agency/verbraucherrechte24/003/' + Form_Hash_1__c),IF(Insurance_Status__c = 'noch aktiv',IF(Account_Id__c = '0011t00000HUP05','https://form.verbraucherhilfe24.de/lebensversicherung-003a/' + Form_Hash_1__c,'https://forms.cloudworx.agency/verbraucherrechte24/lebensversicherung-003a/' + Form_Hash_1__c),IF(Account_Id__c = '0011t00000HUP05','https://form.verbraucherhilfe24.de/lebensversicherung-003b/' + Form_Hash_1__c,'https://forms.cloudworx.agency/verbraucherrechte24/lebensversicherung-003b/' + Form_Hash_1__c))),'muss erstellt werden')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link zum Dokumentenupload - OLD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Upload_Staging_Link__c</fullName>
        <formula>if(Form_Hash_1__c != null,IF(Product__c = 'Dieselskandal',IF(Account_Id__c = '0010Y00000eCUS9','http://staging.forms.cloudworx.agency/verbraucherhilfe24/dieselskandal-003/' + Form_Hash_1__c,'https://staging.forms.cloudworx.agency/verbraucherrechte24/003/' + Form_Hash_1__c),IF(Insurance_Status__c = 'noch aktiv',IF(Account_Id__c = '0010Y00000eCUS9','http://staging.forms.cloudworx.agency/verbraucherhilfe24/lebensversicherung-003a/' + Form_Hash_1__c,'https://staging.forms.cloudworx.agency/verbraucherrechte24/lebensversicherung-003a/' + Form_Hash_1__c),IF(Account_Id__c = '0010Y00000eCUS9','http://staging.forms.cloudworx.agency/verbraucherhilfe24/lebensversicherung-003b/' + Form_Hash_1__c,'https://staging.forms.cloudworx.agency/verbraucherrechte24/lebensversicherung-003b/' + Form_Hash_1__c))),'muss erstellt werden')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link zum Dokumentenupload (Staging)- OLD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dokumente_unvollst_ndig__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dokumente unvollständig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dokumente_vollst_ndig__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dokumente vollständig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dokumentenerhalt_pruefen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dokumentenerhalt prüfen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration_Check_to_Claim__c</fullName>
        <formula>(Set_To_Claim_Date__c)-( Set_To_Check_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration Check to Claim</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_New_to_Check__c</fullName>
        <formula>(Set_To_Check_Date__c) - (Set_To_New_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration New to Check</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dynamization__c</fullName>
        <label>Dynamisierung</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Email_Representative__c</fullName>
        <formula>Contact__r.Email_Representative__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Repräsentant</label>
        <type>Text</type>
    </fields>
</CustomObject>